# time-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  debian.yml  python-linux.yml  ubuntu.yml
src/time_tools/: ts_to_iso_utc.py  ts_to_isoutc.py
src/time_tools/common/: errors.py  tsparser.py  tzmapping.py  version.py
test/: test_lib.py
